# martini-forcefields

./: README.md  setup.cfg  setup.py
martini_forcefields/: __init__.py
martini_forcefields/regular/v3.0.0/gmx_files/: martini_v3.0.0_ions_v1.itp  martini_v3.0.0_small_molecules_v1.itp
martini_forcefields/regular/v3.0.0/gmx_files_contributed/: README.md
v3.0.0/vermouth_files/force_fields/martini3001/: test.itp
vermouth-ff-dir/: aminoacids.ff
