[wheel]
universal = 1

[metadata]
name = martini_forcefields
author = Fabian Grunewald
author_email = f.grunewald@rug.nl
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/marrink-lab/Martini-forcefields
license = Apache 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = coarse-graining martini3 md proteins small-molecules

[ options ]
packages = find:
setup-requires =
    setuptools >= 46.4.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
